testdata/golden/sema/valid/module_multitest/scripts/alpha.fmt
pragma module; // scripts/alpha.sg -> alpha should be imported as scripts

pub fn alpha() -> string {
    return "alpha";
}
