testdata/golden/sema/invalid/module_missing_pragma/with_pragma.fmt
pragma module;

pub fn declared() {}
